// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`tui frames a run error shows its kind and message in the conversation 1`] = `
" agents                 ╭────────────────────────────────────────────────────────────────────────────────────╮
                        │zarg                                                                                │
 no agents yet          │!  model: zarg-router is not reachable                                              │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        ╰────────────────────────────────────────────────────────────────────────────────────╯
                        ┌────────────────────────────────────────────────────────────────────────────────────┐
                        │message › type a message, Enter to send                                             │
                        └────────────────────────────────────────────────────────────────────────────────────┘
                        core child · error · thread main · zarg-r...k-v4.1-flash-exl3   Enter send · Esc leave
"
`;

exports[`tui frames an inquiry: picker with the recommended option preselected and its why; agents pane; status line 1`] = `
" agents                 ╭────────────────────────────────────────────────────────────────────────────────────╮
                        │zarg                                                                                │
 ▾ driver 1       3/25  │zarg  The agenda is empty.                                                          │
   ✓ research 2   done  │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │                                                                                    │
                        │────────────────────────────────────────────────────────────────────────────────────│
                        │? Which card first?                                                                 │
                        │  Login                                                                             │
                        │› Checkout (recommended) — most used                                                │
                        │  Something else…                                                                   │
                        │  Chat about this                                                                   │
                        ╰────────────────────────────────────────────────────────────────────────────────────╯
                        ┌────────────────────────────────────────────────────────────────────────────────────┐
                        │answer zarg above, or / to chat about it                                            │
                        └────────────────────────────────────────────────────────────────────────────────────┘
                        core child · waiting · thread main · zarg...-exl3   ↑↓ pick · Enter answer · Esc leave
"
`;
